feat: add register page

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" href="src/css/style.css">
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+		<link rel="stylesheet" href="/src/css/style.css">
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 		<title>E-comercy</title>
 	</head>
 	<body class="h-100 d-flex align-content-center flex-column">
@@ -17,13 +18,13 @@
 				</div>
 				<ul class="mb-0 nav nav-underline">
 					<li class="nav-item">
-						<a class="nav-link" href="#">Lista</a>
+						<a class="nav-link" href="/src/pages/list.html">Lista</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Cadastro</a>
+						<a class="nav-link" href="/src/pages/register.html">Cadastro</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Busca</a>
+						<a class="nav-link" href="/src/pages/search.html">Busca</a>
 					</li>
 				</ul>
 			</nav>
@@ -69,11 +70,15 @@
 					<div class="growing-arrow showArrow mx-2"><i class="fa-solid fa-arrow-up"></i></div>
 					<div class="descending-arrow mx-2"><i class="fa-solid fa-arrow-down"></i></div>
 				</button>
+				
 			</section>
 		</main>
 		<footer class="text-center p-4 text-light mt-2">&copy; JoaoPedroZ001. All Rights Reserverd.</footer>
 	</body>
-	<script src="src/js/script.js"></script>
+	<script src="/src/js/script.js"></script>
+	<script src="src/js/list-script.js"></script>
+	<script src="src/js/register-script.js"></script>
 	<script src="https://kit.fontawesome.com/31bb1df07a.js" crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+	integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </html>
