fix: fix pages path

--- a/src/pages/list.html
+++ b/src/pages/list.html
@@ -18,13 +18,13 @@
 				</div>
 				<ul class="mb-0 nav nav-underline">
 					<li class="nav-item">
-						<a class="nav-link" href="/src/pages/list.html">Lista</a>
+						<a class="nav-link" href="list.html">Lista</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="/src/pages/register.html">Cadastro</a>
+						<a class="nav-link" href="register.html">Cadastro</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="/src/pages/search.html">Busca</a>
+						<a class="nav-link" href="search.html">Busca</a>
 					</li>
 				</ul>
 			</nav>
