feat: start aplying IndexedDB

--- a/src/pages/register.html
+++ b/src/pages/register.html
@@ -48,7 +48,7 @@
 					<label for="floatingInput">Descrição do produto</label>
 				</div>
 				
-				<button type="button" class="btn btn-dark addProduct">Adicionar</button>
+				<button type="button" class="btn btn-dark addProduct" onclick="addData()">Adicionar</button>
 
 			</section>
 		</main>
@@ -56,7 +56,6 @@
 	</body>
   <script src="/src/js/script.js"></script>
 	<script src="/src/js/register-script.js"></script>
-	<script src="https://kit.fontawesome.com/31bb1df07a.js" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </html>
